# scholar_emails_to_csv

./: .gitignore  LICENSE  README.md  build-zipapp  clean  launch-shim.command  setup.cfg  setup.py
src/: __main__.py
src/minimalhello/: __init__.py  __main__.py
src/scholaremailstocsv/: __init__.py  __main__.py  email_processor.py
