# Anytime you change anything in this file, you should at least re-run:
# `pip install -e .`

[metadata]
# The distribution name (pip):
name = scholaremailstocsv
version = 0.0.0+dev
author = Walker Hale
author_email = hale@bcm.edu
description = Tool to digest multiple Google Scholar alert emails into CSV.
long_description = file:README.md
url = https://github.com/BCM-HGSC
license = MIT
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
# The package names (import):
python_requires = >=3.8
# You don't need package_dir if your packeges are at the top.
package_dir =
    =src
packages = find:
# Demonstration dependency
install_requires =
    addict
    beautifulsoup4
    requests
    yarl

# You don't this if your packeges are at the top.
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scholaremailstocsv = scholaremailstocsv.__main__:main

[bdist_wheel]
universal = 1
